--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="">
   <head>
     <meta charset="utf-8">
@@ -12,11 +12,11 @@
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected 
+    <!-- built files will be auto injected  -->
   </body>
-</html> -->
+</html>
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -49,4 +49,4 @@
         <h1 class="napis">WIRUS</h1>
     </div>
 </body>
-</html>
+</html> -->
